# my-plants-AI

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  schema.sql
.github/workflows/: bump_version.yml  release-please.yml
app/: main.py
app/api/v1/: api.py  chatbot.py  documents.py  testing.py
app/core/: callbacks.py  config.py  embeddings.py  logging.py  metrics.py  middleware.py  vectorstore.py
app/core/graph/: __init__.py  agents.py  graph.py
app/core/langgraph/: graph.py
app/core/prompts/: __init__.py  plant_care_agent.md  supervisor.md  system.md
app/core/rag/: __init__.py  document_processor.py  multi_index_manager.py  query_engine.py  rag_interface.py
app/core/tools/: __init__.py  knowledge_base.py  npk_calculator.py  ph_calculator.py  retriever.py  search_plant.py
app/core/tools/notion/: __init__.py  notion.py
app/factories/: __init__.py  embedding_factory.py
app/models/: base.py  document.py  user.py
app/schemas/: __init__.py  chat.py  document.py  graph.py  rag.py
app/services/: database.py
app/utils/: file_utils.py
grafana/dashboards/json/: llm_metrics.json
tests/: conftest.py  evaluation_llm.py  http_client_wrapper.py  pytest.ini  utils.py
tests/custom_metrics/: deepeval_metrics.py
tests/data/: __init__.py
tests/data/datasets/: aqa-dataset-rag.json  aqa-dataset-simple-interactions.json
tests/data/documents/: tomatoes_fert_plan.txt
tests/e2e/with_deepeval/: conftest.py  test_deepeval.py
